--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     depends_on:
       - rtsp-server
     volumes:
-      - ../sampleTest/vid_test_1.mp4:/videos/vid_test_1.mp4:ro
-      - ../sampleTest/vid_test_2.mp4:/videos/vid_test_2.mp4:ro
+      - ./sampleTest/vid_test_1.mp4:/videos/vid_test_1.mp4:ro
+      - ./sampleTest/vid_test_2.mp4:/videos/vid_test_2.mp4:ro
     restart: always
     entrypoint: ["/bin/sh", "-c"]
     command: >
@@ -30,7 +30,7 @@ services:
       MYSQL_ROOT_PASSWORD: 12345
       MYSQL_DATABASE: rtsp_db
     ports:
-      - "3306:3306" # Dùng cổng chuẩn 3306
+      - "43306:3306" 
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p12345"]
       interval: 10s
@@ -50,7 +50,7 @@ services:
     volumes:
       - .:/app  
     working_dir: /app 
-    command: python -m Realtime_running.server
+    command: python -m pythonFile.Realtime_running.server
     
     # Kích hoạt GPU (nếu có)
     deploy:
